--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -27,7 +27,7 @@
       *ngFor="let menu of topmenu"
       [class.clicked]="page == menu"
       [class.grised]="!menu.active"
-      (click)="page = menu"
+      (click)="clickMenu(menu)"
     >
       {{ menu.nom | uppercase }}
     </p>
@@ -141,6 +141,119 @@
 
     <div class="list girls marquee">
       <img *ngFor="let img of lists[1]" src="{{ img }}" />
+    </div>
+  </div>
+
+  <div *ngIf="page.nom == 'About'">
+    <div class="image-desc">
+      <div class="content">
+        <div class="marquee-container">
+          <div class="marquee">
+            <p>Behind the brush</p>
+            <p>Behind the brush</p>
+            <p>Behind the brush</p>
+            <p>Behind the brush</p>
+            <p>Behind the brush</p>
+          </div>
+        </div>
+        <img src="0.jpg" />
+        <div class="text">
+          <p>
+            Welcome to my website and thank you for being here. This is the
+            corner of the website to know more about me. So, a little bit about
+            my journey... I was born and raised in Paris, where romance
+            intertwines effortlessly with style and luxury. After graduating
+            international marketing and working in digital communication, I
+            decided in 2019 to follow my true passion and became a bridal makeup
+            artist and hairstylist.
+          </p>
+          <p>
+            I love drawing inspiration from the timeless elegance of the iconic
+            city of Paris, where the art of beauty is celebrated in every
+            detail, and from the women who surround me: my beautiful mother, my
+            sisters and every bride-to-be who trusts me with their beauty. Their
+            grace, strength and love fuel my passion for creating exquisite
+            bridal looks. My experience as a sales associate for high-end brands
+            such as Céline and Courrèges also allowed me to develop my sense of
+            perfection and detail and confirmed my passion for French luxury.
+          </p>
+          <p>
+            Over the years, I had the honor to be a part of more than 200
+            stunning celebrations and to see my work published on wedding
+            publications such as Style Me Pretty, Madame Figaro, Wedding
+            Sparrow, Wedluxe and Magnolia Rouge. ​
+          </p>
+          <button>SERVICES</button>
+        </div>
+      </div>
+    </div>
+    <div class="gray-left-text-image">
+      <div class="left-text">
+        <p>My approach</p>
+        <p><i>My signature style</i></p>
+        <p></p>
+        <p>
+          Your wedding day should celebrate you; a version of yourself that
+          feels authentic, radiant, and unforgettable. My signature style is all
+          about creating modern and effortlessly elegant looks that complement
+          my brides style and beauty features. I focus on soft and luminous
+          finishes to ensure a flawless yet natural complexion, without feeling
+          overdone. Imagine the refined bridal beauty of Sofia Richie, Olivia
+          Culpo and Hailey Bieber; luminous and modern with a natural glow that
+          exudes sophistication. When it comes to hair, I aim for effortless
+          styles that stand the test of time. Whether it’s soft waves, delicate
+          updos, or chic and undone textures, my goal is to create hairstyles
+          that feel romantic and timeless, complementing your natural beauty and
+          lasting all day long.
+        </p>
+        <p><i>A tailored experience</i></p>
+        <p>
+          My intention for you is to have an unforgettably simple and tailored
+          experience from the moment you contact me until the moment you walk
+          down the aisle, ensuring every detail is meticulously planned and
+          executed. My goal is to provide all the time and attention you need
+          and to make you feel perfectly polished and confident on such a
+          memorable day in your life.​​​
+        </p>
+        <p><i>An exclusive service</i></p>
+        <p>
+          I believe every bride deserves my full attention and the highest level
+          of service on her special day. To ensure I can give each bride the
+          best possible experience, I take on a limited number of weddings per
+          year and I only commit to one wedding per day. Your wedding day is a
+          once-in-a-lifetime moment, and I am here to make sure you feel
+          absolutely stunning from start to finish.
+        </p>
+      </div>
+      <img src="4.jpg" *ngIf="paysage" />
+    </div>
+    <div class="avis">
+      <p class="title">Kind words from my brides</p>
+      <div class="container-avis">
+        <div
+          class="image-desc"
+          *ngFor="let avis of listeavis"
+          [style.left]="-avisClicked * innerWidth + avisClicked * 8 + 'px'"
+        >
+          <div class="content">
+            <img src="{{ avis.img }}" />
+            <div class="text">
+              <p>{{ avis.txt }}</p>
+              <p>{{ avis.nom }}</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="dotsmenu">
+        <p
+          *ngFor="let avis of listeavis; let i = index"
+          class="clickable"
+          (click)="avisClicked = i"
+          [class.clicked]="avisClicked == i"
+        >
+          .
+        </p>
+      </div>
     </div>
   </div>
 
