--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -189,6 +189,7 @@
     </div>
     <div class="gray-left-text-image">
       <div class="left-text">
+        <img src="4.jpg" *ngIf="!paysage" />
         <p>My approach</p>
         <p><i>My signature style</i></p>
         <p></p>
