--- a/src/styles.scss
+++ b/src/styles.scss
@@ -485,6 +485,7 @@ textarea::placeholder {
     text-align: center;
     font-size: 5vh;
     font-weight: bold;
+    line-height: 4vh;
   }
 
   .image-desc {
