--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -71,7 +71,7 @@
           <div class="marquee-container">
             <div class="marquee">
               <p *ngFor="let i of onetoten">
-                {{ trads[trad].meet_the_artist }}
+                {{ trad == "fr" ? "Bienvenue" : "Welcome" }}
               </p>
             </div>
           </div>
